Finished business view layout

--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -371,46 +371,36 @@ Developer: Derek Sheldon</string>
                                             </stackView>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="promotion" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DeM-69-JUw">
-                                        <rect key="frame" x="0.0" y="344" width="375" height="40"/>
-                                        <color key="backgroundColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="7fY-I8-xl7"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3w2-5h-qRQ" userLabel="Address Stack View">
-                                        <rect key="frame" x="124" y="404" width="127.5" height="111"/>
+                                        <rect key="frame" x="118.5" y="414" width="138.5" height="111"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usv-VJ-bwq">
-                                                <rect key="frame" x="31" y="0.0" width="65.5" height="29"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                                <rect key="frame" x="35.5" y="0.0" width="68" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
                                                 <color key="textColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Address 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fa-4M-axC">
-                                                <rect key="frame" x="26.5" y="29" width="75" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="29" y="29" width="80.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Address 2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdn-Ns-cIS">
-                                                <rect key="frame" x="25.5" y="49.5" width="77" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="28" y="49.5" width="82.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="City, ST 00000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QA9-kz-pl6">
-                                                <rect key="frame" x="6.5" y="70" width="115" height="20.5"/>
-                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                                <rect key="frame" x="7.5" y="70" width="124" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="(000) 000-0000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceq-HX-4A0">
-                                                <rect key="frame" x="0.0" y="90.5" width="127.5" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="0.0" y="90.5" width="138.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -434,21 +424,56 @@ Developer: Derek Sheldon</string>
                                             <action selector="closeButtonTapped" destination="gcm-cc-Ct0" eventType="touchUpInside" id="Ns7-jR-VVL"/>
                                         </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Yd-Sn-fPl" userLabel="Promotion Box">
+                                        <rect key="frame" x="0.0" y="344" width="375" height="50"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="lfF-9Q-Rgc">
+                                                <rect key="frame" x="20" y="10" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="4yu-fV-PBH"/>
+                                                    <constraint firstAttribute="height" constant="30" id="6Er-6G-vNz"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="promotion" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DeM-69-JUw">
+                                                <rect key="frame" x="60" y="15" width="255" height="20.5"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="Erl-tQ-je2">
+                                                <rect key="frame" x="325" y="10" width="30" height="30"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="Erl-tQ-je2" firstAttribute="height" secondItem="lfF-9Q-Rgc" secondAttribute="height" id="1hO-gb-piK"/>
+                                            <constraint firstItem="Erl-tQ-je2" firstAttribute="width" secondItem="lfF-9Q-Rgc" secondAttribute="width" id="1o5-bf-gv4"/>
+                                            <constraint firstItem="Erl-tQ-je2" firstAttribute="leading" secondItem="DeM-69-JUw" secondAttribute="trailing" constant="10" id="70H-r8-Bow"/>
+                                            <constraint firstItem="DeM-69-JUw" firstAttribute="centerY" secondItem="2Yd-Sn-fPl" secondAttribute="centerY" id="8xV-xS-imx"/>
+                                            <constraint firstItem="lfF-9Q-Rgc" firstAttribute="leading" secondItem="2Yd-Sn-fPl" secondAttribute="leading" constant="20" id="9rn-Nh-maW"/>
+                                            <constraint firstAttribute="trailing" secondItem="Erl-tQ-je2" secondAttribute="trailing" constant="20" id="DyL-jd-3jH"/>
+                                            <constraint firstAttribute="height" constant="50" id="J1A-DW-Fjk"/>
+                                            <constraint firstItem="DeM-69-JUw" firstAttribute="leading" secondItem="lfF-9Q-Rgc" secondAttribute="trailing" constant="10" id="XCW-Ka-NcK"/>
+                                            <constraint firstItem="Erl-tQ-je2" firstAttribute="centerY" secondItem="2Yd-Sn-fPl" secondAttribute="centerY" id="dt3-z3-XTE"/>
+                                            <constraint firstItem="lfF-9Q-Rgc" firstAttribute="centerY" secondItem="2Yd-Sn-fPl" secondAttribute="centerY" id="twD-xZ-JJU"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="3w2-5h-qRQ" firstAttribute="centerX" secondItem="GtD-6W-098" secondAttribute="centerX" id="15N-aI-d61"/>
+                                    <constraint firstAttribute="trailing" secondItem="2Yd-Sn-fPl" secondAttribute="trailing" id="2LR-CK-f3r"/>
                                     <constraint firstItem="8o7-eQ-Hs9" firstAttribute="top" secondItem="GtD-6W-098" secondAttribute="top" constant="5" id="5Se-Ks-jsh"/>
-                                    <constraint firstItem="DeM-69-JUw" firstAttribute="top" secondItem="5ZE-sE-iJ9" secondAttribute="bottom" id="9nK-5N-5os"/>
-                                    <constraint firstItem="DeM-69-JUw" firstAttribute="leading" secondItem="GtD-6W-098" secondAttribute="leading" id="F2a-2w-Vhg"/>
                                     <constraint firstItem="5ZE-sE-iJ9" firstAttribute="top" secondItem="GtD-6W-098" secondAttribute="top" id="IP0-7Q-Z8H"/>
                                     <constraint firstAttribute="trailing" secondItem="5ZE-sE-iJ9" secondAttribute="trailing" id="LbZ-UZ-FnE"/>
                                     <constraint firstItem="5ZE-sE-iJ9" firstAttribute="trailing" secondItem="zNZ-se-hoS" secondAttribute="trailing" id="PCS-kc-wEa"/>
                                     <constraint firstItem="5ZE-sE-iJ9" firstAttribute="leading" secondItem="GtD-6W-098" secondAttribute="leading" id="Ts8-oF-rLj"/>
-                                    <constraint firstAttribute="trailing" secondItem="DeM-69-JUw" secondAttribute="trailing" id="dNu-b6-4jC"/>
+                                    <constraint firstItem="2Yd-Sn-fPl" firstAttribute="top" secondItem="5ZE-sE-iJ9" secondAttribute="bottom" id="VZ2-x0-5dA"/>
+                                    <constraint firstItem="2Yd-Sn-fPl" firstAttribute="leading" secondItem="GtD-6W-098" secondAttribute="leading" id="Wy4-1c-Sus"/>
                                     <constraint firstItem="5ZE-sE-iJ9" firstAttribute="bottom" secondItem="zNZ-se-hoS" secondAttribute="bottom" constant="10" id="efm-dY-TvH"/>
-                                    <constraint firstItem="3w2-5h-qRQ" firstAttribute="top" secondItem="DeM-69-JUw" secondAttribute="bottom" constant="20" id="ftm-SY-saC"/>
                                     <constraint firstAttribute="trailing" secondItem="8o7-eQ-Hs9" secondAttribute="trailing" constant="5" id="lZN-0R-QM5"/>
+                                    <constraint firstItem="3w2-5h-qRQ" firstAttribute="top" secondItem="2Yd-Sn-fPl" secondAttribute="bottom" constant="20" id="qaH-yk-9Pz"/>
                                     <constraint firstItem="zNZ-se-hoS" firstAttribute="leading" secondItem="5ZE-sE-iJ9" secondAttribute="leading" id="rr2-pD-Vzc"/>
                                 </constraints>
                             </view>
@@ -481,11 +506,12 @@ Developer: Derek Sheldon</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="41Y-yJ-6g4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-156" y="787"/>
+            <point key="canvasLocation" x="-156" y="786.65667166416802"/>
         </scene>
     </scenes>
     <resources>
         <image name="logo" width="898" height="505"/>
+        <image name="star" width="22" height="22"/>
         <image name="sweet" width="550" height="363"/>
     </resources>
 </document>
